<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_dark"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvArchiveTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lbl_exam_show_or_ans"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/tvArchiveInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small_ultra"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btnReexam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/btn_reexam"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnShowQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/btn_question_show"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/btnShowDiscussion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/btn_exam_discussion"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium" />

</LinearLayout>
