<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cv"
    style="@style/CardViewStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/tvMeritPosition"
            style="@style/CardViewTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_position"/>

        <View style="@style/DividerVerticalGray"/>

        <TextView
            android:id="@+id/tvMeritName"
            style="@style/CardViewTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/lbl_name"/>

        <View style="@style/DividerVerticalGray"/>

        <TextView
            android:id="@+id/tvMeritMark"
            style="@style/CardViewTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/lbl_mark"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>
