<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nesterScrollViewNextExamSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--<android.support.v7.widget.CardView-->
        <!--style="@style/CardViewStyle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:paddingBottom="5dp"-->
        <!--android:paddingTop="5dp"-->
        <!--app:contentPadding="5dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/primary_dark"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:weightSum="8">

            <TextView
                android:id="@+id/tvMeritPosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lbl_position"
                android:textColor="@color/white"/>

            <!--<View style="@style/DividerVerticalWhite"/>-->

            <TextView
                android:id="@+id/tvMeritName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/lbl_name"
                android:textColor="@color/white"/>

            <!--<View style="@style/DividerVerticalWhite"/>-->

            <TextView
                android:id="@+id/tvMeritMark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/lbl_mark"
                android:textColor="@color/white"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <include
        layout="@layout/layout_recycler_view_without_scrolling_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nesterScrollViewNextExamSection"/>
</RelativeLayout>
